--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         </ul>
         <div class="rodape__logo">
             <h4></h4>
-            <p>Desenvolvido por Alura.</p>
+            <p>Desenvolvido por Jhon.</p>
         </div>
     </footer>
 </body>
